# utils

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cpp_project.yml
include/: contours.h  imageio.h
src/: imageio.cpp  main.cpp
test/: CMakeLists.txt
